--- a/client/gameplay/防作弊.md
+++ b/client/gameplay/防作弊.md
@@ -61,4 +61,42 @@ auto getValue() -> T
 }
 
 ```
+### 防止加速器
+加速器的主要原理是修改时钟频率，导致游戏update次数变多，游戏时间流逝加快。因此需要对加速器进行检查。
 
+检查方式为：开启一条线程做时钟计算，由于Sleep（）是调用的系统函数，线程休眠时间由操作系统进行计算，因此可以得出相对准确的时间流逝。
+
+通过线程的时间计算同时可以精确的得出游戏加速的倍率
+
+``` cpp
+auto Application::checkTimeAccelerator() -> void {
+    
+    float totalRate = 0;
+    int32_t count = 0;
+    while (true) {
+        if (!pause) {
+            auto start = timer.currentTimestamp();
+            std::this_thread::sleep_for(std::chrono::seconds(1));
+            auto end = timer.currentTimestamp();
+            auto elapsed = end - start;
+            auto rate = elapsed / 1000.f;
+            totalRate += rate;
+            count++;
+            if (count == 10) {
+                auto per = totalRate / count;
+                count = 0;
+                totalRate = 0;
+                Log("rate : %f", per);
+                if (per > 1.21111f) {
+                    if (!interrupt) {
+                        Network::CheckHashPacket(5, "Rate is " + std::to_string(per)).dispatch();
+                    } else if (!pause) {
+                        interrupt = false;
+                    }
+                }
+            }
+        }
+    }
+}
+
+```
