add the definition of heap

--- a/client/engine/时钟管理.md
+++ b/client/engine/时钟管理.md
@@ -32,6 +32,15 @@ auto Timer::update(int16_t timestep) -> void
 因此调度器当中，需要对任务的时长进行排序。在当前的冒险岛的设计当中，使用**大根堆**对任务进行排序。因为在进队的过程中，可以利用堆的特性自动进行排序，让最近需要执行的任务放在堆顶。
 
 
+* Heap是一种数据结构具有以下的特点
+* 1）完全二叉树；
+* 2）heap中存储的值是偏序；
+
+* 大根堆
+* 根结点（亦称为堆顶）的关键字是堆里所有结点关键字中最大者，称为大根堆，又称最大堆（大顶堆）
+
+
+
 当前设计中定义如下的数据结构：
 
 
